--- a/static/styles.css
+++ b/static/styles.css
@@ -375,7 +375,19 @@ tr {
     align-items: center;
 
     background-color: rgba(0, 0, 0, 0.5);
+    animation-name: popup-fade-in;
+    animation-duration: 0.2s;
     overflow: hidden;
+}
+
+@keyframes popup-fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .popup-content {
